# qdiagparser

./: .gitignore  Makefile  README.md  pyproject.toml  qdiagparser
csrc/: qdiagmon.c  qdiagmon_dci.c
docs/: GUI_HANDOFF.md  SCHEDULING_PROBE.md  gui-state.example.json
scripts/: qdiag-gui-sample.sh
src/qdiagparser/: __init__.py  bitutil.py  cli.py  diag.py  io.py  logcodes.py  metrics.py  state.py
tests/: test_diag.py  test_metrics.py  test_state.py
